clang/test/BSC/Negative/Ownership/Borrow/borrow_struct/borrow_struct.cbs
// RUN: %clang_cc1 -fsyntax-only -verify=expected %s -verify-ignore-unexpected=note

struct S {
    int *borrow b1;
    int *borrow b2;
};

void use_borrow(int *borrow b) {}

void test() {
    int a = 0;
    int *borrow p = &mut a;

    struct S b = {.b1 = p, .b2 = p};
    // expected-error@-1 {{cannot use `p` because it was mutably borrowed}}
    // expected-error@-2 {{cannot borrow `*p` as mutable more than once at a time}}
    use_borrow(b.b1);

    int *borrow p1 = p;
    int *borrow p2 = p;
    // expected-error@-1 {{cannot use `p` because it was mutably borrowed}}
    // expected-error@-2 {{cannot borrow `*p` as mutable more than once at a time}}
    struct S b2 = {.b1 = p1, .b2 = p2};
    use_borrow(b2.b1);
}

void test2(){
    int a = 0;
    int *borrow p = &mut a;
    int *borrow arr[2] = {p, p};
    // expected-error@-1 {{cannot use `p` because it was mutably borrowed}}
    // expected-error@-2 {{cannot borrow `*p` as mutable more than once at a time}}
    use_borrow(arr[0]);
}

int main() { return 0; }
